[gd_scene load_steps=11 format=3 uid="uid://ca3h4jkxhb4in"]

[ext_resource type="Script" uid="uid://cxi8bwsgf2tf5" path="res://mixer/channel/channel.gd" id="1_fs7db"]
[ext_resource type="Theme" uid="uid://yjlloxuxuglv" path="res://mixer/channel/channel_theme.tres" id="1_r7hwx"]
[ext_resource type="Script" uid="uid://bv3u7kki6mrx0" path="res://mixer/channel/auto_scroll.gd" id="2_fs7db"]
[ext_resource type="LabelSettings" uid="uid://be4xqm441ll6q" path="res://mixer/channel/info_label_settings.tres" id="2_x733n"]
[ext_resource type="PackedScene" uid="uid://bq6d0byo8lff1" path="res://mixer/channel/filter_control/filter_control.tscn" id="4_whvf4"]
[ext_resource type="PackedScene" uid="uid://dja6spkrnbt03" path="res://mixer/channel/display_knob/display_knob_large.tscn" id="5_wi5qk"]
[ext_resource type="PackedScene" uid="uid://bdq03txeg4kos" path="res://mixer/channel/basic_components/volume_slider.tscn" id="6_whvf4"]
[ext_resource type="PackedScene" uid="uid://c2h1rr4er8idf" path="res://playback/audio_looper.tscn" id="7_whvf4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7hwx"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7hwx"]
resource_local_to_scene = true

[node name="Channel" type="PanelContainer"]
custom_minimum_size = Vector2(80, 500)
offset_right = 144.0
offset_bottom = 1079.0
size_flags_horizontal = 0
theme = ExtResource("1_r7hwx")
script = ExtResource("1_fs7db")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Info" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r7hwx")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Info"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Info/MarginContainer2"]
layout_mode = 2

[node name="ChannelLabel" type="Label" parent="VBoxContainer/Info/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.398793, 0.398793, 0.398793, 1)
layout_mode = 2
text = "CH 1"
label_settings = ExtResource("2_x733n")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Info/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("2_fs7db")

[node name="NameLabel" type="Label" parent="VBoxContainer/Info/MarginContainer2/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Name"
label_settings = ExtResource("2_x733n")
horizontal_alignment = 1

[node name="Controls" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FilterControl" parent="VBoxContainer/Controls/VBoxContainer" instance=ExtResource("4_whvf4")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r7hwx")

[node name="PitchKnob" parent="VBoxContainer/Controls/VBoxContainer" instance=ExtResource("5_wi5qk")]
unique_name_in_owner = true
layout_mode = 2
text = "Pitch"

[node name="PanKnob" parent="VBoxContainer/Controls/VBoxContainer" instance=ExtResource("5_wi5qk")]
unique_name_in_owner = true
layout_mode = 2
text = "Pan"

[node name="Spacer" type="Control" parent="VBoxContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VolumeSlider" parent="VBoxContainer/Controls/VBoxContainer" instance=ExtResource("6_whvf4")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MuteButton" type="Button" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "M"

[node name="SoloButton" type="Button" parent="VBoxContainer/Controls/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "S"

[node name="AudioLooper" parent="." instance=ExtResource("7_whvf4")]
